added requirements.txt to dockerfiles for docs

--- a/Sphinx/docs/Dockerfile
+++ b/Sphinx/docs/Dockerfile
@@ -6,6 +6,8 @@ COPY ./django_server django_server/
 
 COPY ./Sphinx/docs /ERPsim-helper/Sphinx/docs
 
+COPY requirements.txt /ERPsim-helper/requirements.txt
+
 RUN pip3 install rst2pdf furo
 
 CMD sphinx-build -M html Sphinx/docs/source Sphinx/docs/build
