Install, Usage and Architecture documentation

--- a/Sphinx/docs/Dockerfile
+++ b/Sphinx/docs/Dockerfile
@@ -8,6 +8,6 @@ COPY ./Sphinx/docs /ERPsim-helper/Sphinx/docs
 
 COPY requirements.txt /ERPsim-helper/requirements.txt
 
-RUN pip3 install rst2pdf furo
+RUN pip3 install rst2pdf furo sphinx-rtd-theme
 
 CMD sphinx-build -M html Sphinx/docs/source Sphinx/docs/build
