--- a/Sphinx/docs/Dockerfile-dev
+++ b/Sphinx/docs/Dockerfile-dev
@@ -6,4 +6,4 @@ COPY ./django_server django_server/
 
 COPY requirements.txt /ERPsim-helper/requirements.txt
 
-RUN pip3 install sphinx-autobuild rst2pdf furo
+RUN pip3 install sphinx-autobuild rst2pdf furo sphinx-rtd-theme
