--- a/Sphinx/docs/Dockerfile-dev
+++ b/Sphinx/docs/Dockerfile-dev
@@ -1,9 +1,11 @@
-FROM sphinxdoc/sphinx
+FROM python:3.7-slim
 
 WORKDIR /ERPsim-helper
 
 COPY ./django_server django_server/
 
 COPY requirements.txt /ERPsim-helper/requirements.txt
+
+RUN pip install -r requirements.txt
 
 RUN pip3 install sphinx-autobuild furo sphinx-rtd-theme
